# llp3

./: CMakeLists.txt
client_side/: CMakeLists.txt  Makefile  Makefile.win  lex.yy.c  main.cpp  main.h  parser.tab.c  parser.tab.h  parser.y
client_side/include/: ast.h  output.h  string_utils.h  string_utils_xml.h
client_side/src/: ast.c  output.c  string_utils.c  string_utils_xml.cpp
server_side/: CMakeLists.txt  Makefile  Makefile.unix  README.md  main.cpp  scheme.xsd
server_side/include/: database.h  file_ops.h  query.h  receiver.h  relation.h  server_ops.h  type_ops.h
server_side/src/: database.c  file_ops.c  main.c  relation.c  schema.c  type_ops.c
